--- a/Fig.2
+++ b/Fig.2
@@ -138,147 +138,164 @@ if (require(ggplot2)) {
 
 
 # ====================================================
-# PcoA Analysis
+# PCoA Analysis
 library(vegan)
 library(ggplot2)
 library(ade4)
 
-#读取已经准备好的距离矩阵文件，如 Bray-curtis 距离，排序
+# Read pre-calculated distance matrix file, e.g., Bray-Curtis distance
 dis <- read.delim('bray_curtis_distance_matrix_D1.txt', row.names = 1, sep = '\t', stringsAsFactors = FALSE, check.names = FALSE)
-bray_dis <- as.dist(dis)	#转为 dist 数据类型
+bray_dis <- as.dist(dis)	# Convert to dist data type
 
-#负值校正
-is.euclid(bray_dis)  #判断是否为欧式距离，显示为否则运行矫正，若是则运行排序 
-bray_dis_sqrt <- sqrt(bray_dis)      #平方根转化
-is.euclid(bray_dis_sqrt)  #判断是否为欧式距离，显示为是
+# Correct negative values
+is.euclid(bray_dis)  # Check if Euclidean distance, if FALSE then correct, if TRUE then proceed with ordination
+bray_dis_sqrt <- sqrt(bray_dis)      # Square root transformation
+is.euclid(bray_dis_sqrt)  # Check if Euclidean distance, should be TRUE
 
-#PCoA 函数中本身也提供了校正参数（add），避免负特征值的产生
-#Cailliez 校正
-#pcoa <- cmdscale(bray_dis, k = (nrow(otu) - 1), eig = TRUE, add = TRUE)
+# PCoA function also provides correction parameters (add) to avoid negative eigenvalues
+# Cailliez correction
+# pcoa <- cmdscale(bray_dis, k = (nrow(otu) - 1), eig = TRUE, add = TRUE)
 
-#PCoA 排序，详情 ?cmdscale
+# PCoA ordination, see ?cmdscale for details
 pcoa <- cmdscale(bray_dis, k = (nrow(dis) - 1), eig = TRUE)
 
-#各 PCoA 轴的特征值
+# Eigenvalues of each PCoA axis
 pcoa_eig <- pcoa$eig
-#先评估下负特征值（末尾几个轴）
+# Evaluate negative eigenvalues (last few axes)
 barplot(pcoa_eig)
 
-#如果负特征值影响甚微，则继续
-#如果负特征值非常明显，则应当先校正
-#各 PCoA 轴的解释量
+# If negative eigenvalues have minimal impact, continue
+# If negative eigenvalues are significant, correction should be applied first
+# Variance explained by each PCoA axis
 pcoa_exp <- pcoa$eig/sum(pcoa$eig)
-#前 4 轴解释量
-pcoa1 <- paste('PCoA axis1 :', round(100*pcoa_exp[1], 2), '%')
-pcoa2 <- paste('PCoA axis2 :', round(100*pcoa_exp[2], 2), '%')
-pcoa3 <- paste('PCoA axis3 :', round(100*pcoa_exp[3], 2), '%')
-pcoa4 <- paste('PCoA axis4 :', round(100*pcoa_exp[4], 2), '%')
+# Variance explained for first 4 axes
+pcoa1 <- paste('PCoA axis1:', round(100*pcoa_exp[1], 2), '%')
+pcoa2 <- paste('PCoA axis2:', round(100*pcoa_exp[2], 2), '%')
+pcoa3 <- paste('PCoA axis3:', round(100*pcoa_exp[3], 2), '%')
+pcoa4 <- paste('PCoA axis4:', round(100*pcoa_exp[4], 2), '%')
 
-#添加分组信息 方法2
+# Add grouping information - Method 2
 site <- data.frame(pcoa$point)[1:2]
 site$name <- rownames(site)
-group <- read.table("group_D1.txt",sep = "\t",header = T,row.names = 1)
+group <- read.table("group_D1.txt", sep = "\t", header = T, row.names = 1)
 group$name <- rownames(group)
-nmds_dis_site <- merge(site,group,by='name')
+nmds_dis_site <- merge(site, group, by = 'name')
 nmds_dis_site$soil <- factor(nmds_dis_site$soil)
-write.table(nmds_dis_site,file = 'Pcoa_D1.xls',sep = '\t',row.names = F)
+write.table(nmds_dis_site, file = 'Pcoa_D1.xls', sep = '\t', row.names = F)
 
-#作图1 黑土_定殖后
-#size点大小，stroke点边框粗细,panel.grid.minor=element_blank()不加参数边框有白色间隔
+# Plot 1 - Black soil_post-colonization
+# size: point size, stroke: point border thickness, panel.grid.minor=element_blank() removes white gaps
 p <- ggplot(data = nmds_dis_site, aes(X1, X2)) +
-  geom_point(aes(color = soil, shape = protist),size= 4) +
-  #scale_color_brewer(palette='Set1') +
-  scale_color_manual(values = c("#3877AE","#A31F24"),limits = c('B','R'))+
-  scale_shape_manual(values = c(15,19),limits = c('P0','P2'))+
-  theme(panel.grid.major = element_blank(),panel.grid.minor=element_blank(), panel.background = element_rect(color = 'black', fill = 'transparent'), 
-        plot.title = element_text(size=15,hjust = 0.5),axis.title.y = element_text(size=15),axis.title.x = element_text(size=15),axis.text.x = element_text(size=15,vjust = 0.5,hjust = 0.5),axis.text.y = element_text(size=15,vjust = 0.5,hjust = 0.5),legend.text = element_text(size=12),strip.text.x = element_text(size=12)) +
-  labs(x = pcoa1, y = pcoa2, title = ' Black soil_PCoA_P2_weighted-unifrac_distance') +
-  stat_ellipse(aes(color = soil), geom = 'polygon', level = 0.95, alpha = 0, show.legend = FALSE,linetype = 2)
+  geom_point(aes(color = soil, shape = protist), size = 4) +
+  # scale_color_brewer(palette='Set1') +
+  scale_color_manual(values = c("#3877AE", "#A31F24"), limits = c('B', 'R')) +
+  scale_shape_manual(values = c(15, 19), limits = c('P0', 'P2')) +
+  theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(), 
+        panel.background = element_rect(color = 'black', fill = 'transparent'), 
+        plot.title = element_text(size = 15, hjust = 0.5),
+        axis.title.y = element_text(size = 15),
+        axis.title.x = element_text(size = 15),
+        axis.text.x = element_text(size = 15, vjust = 0.5, hjust = 0.5),
+        axis.text.y = element_text(size = 15, vjust = 0.5, hjust = 0.5),
+        legend.text = element_text(size = 12),
+        strip.text.x = element_text(size = 12)) +
+  labs(x = pcoa1, y = pcoa2, title = 'Black soil_PCoA_P2_weighted-unifrac_distance') +
+  stat_ellipse(aes(color = soil), geom = 'polygon', level = 0.95, alpha = 0, show.legend = FALSE, linetype = 2)
 
 p 
-ggsave(file="D1.pdf", width=9, height=8)
+ggsave(file = "D1.pdf", width = 9, height = 8)
 
 
-#作图2  红壤_定殖后
-#size点大小，stroke点边框粗细,panel.grid.minor=element_blank()不加参数边框有白色间隔
+# Plot 2 - Red soil_post-colonization
+# size: point size, stroke: point border thickness, panel.grid.minor=element_blank() removes white gaps
 p <- ggplot(data = nmds_dis_site, aes(X1, X2)) +
-  geom_point(aes(color = protist, shape = bacterial),size= 2) +
-  #scale_color_brewer(palette='Set1') +
-  scale_color_manual(values = c('#9DC55C','#D46115'),limits = c('P0','P2'))+
-  scale_shape_manual(values = c(15,17,19),limits = c('D1','D2','D3'))+
-  theme(panel.grid.major = element_blank(),panel.grid.minor=element_blank(), panel.background = element_rect(color = 'black', fill = 'transparent'), 
-        plot.title = element_text(size=15,hjust = 0.5),axis.title.y = element_text(size=15),axis.title.x = element_text(size=15),axis.text.x = element_text(size=15,vjust = 0.5,hjust = 0.5),axis.text.y = element_text(size=15,vjust = 0.5,hjust = 0.5),legend.text = element_text(size=12),strip.text.x = element_text(size=12)) +
+  geom_point(aes(color = protist, shape = bacterial), size = 2) +
+  # scale_color_brewer(palette='Set1') +
+  scale_color_manual(values = c('#9DC55C', '#D46115'), limits = c('P0', 'P2')) +
+  scale_shape_manual(values = c(15, 17, 19), limits = c('D1', 'D2', 'D3')) +
+  theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(), 
+        panel.background = element_rect(color = 'black', fill = 'transparent'), 
+        plot.title = element_text(size = 15, hjust = 0.5),
+        axis.title.y = element_text(size = 15),
+        axis.title.x = element_text(size = 15),
+        axis.text.x = element_text(size = 15, vjust = 0.5, hjust = 0.5),
+        axis.text.y = element_text(size = 15, vjust = 0.5, hjust = 0.5),
+        legend.text = element_text(size = 12),
+        strip.text.x = element_text(size = 12)) +
   labs(x = pcoa1, y = pcoa2, title = 'Red soil_PCoA_P2_weighted-unifrac_distance') +
-  stat_ellipse(aes(color = protist), geom = 'polygon', level = 0.95, alpha = 0, show.legend = FALSE,linetype = 2)
+  stat_ellipse(aes(color = protist), geom = 'polygon', level = 0.95, alpha = 0, show.legend = FALSE, linetype = 2)
 
 p 
-#调整坐标轴范围
-p + coord_cartesian(xlim = c(-0.23, 0.23),ylim = c(-0.23,0.23))
-#5.5X8 iches
+# Adjust axis ranges
+p + coord_cartesian(xlim = c(-0.23, 0.23), ylim = c(-0.23, 0.23))
+# 5.5X8 inches
 
-#作图2
-#size点大小，stroke点边框粗细
+# Plot 2 alternative
+# size: point size, stroke: point border thickness
 p1 <- ggplot(data = nmds_dis_site, aes(X1, X2)) +
-  geom_point(aes(color = treatment),size= 2) +
-  #scale_color_brewer(palette='Paired') +
-  scale_color_manual(values = c('#9DC55C','#6AADDF','#8B7AB0','#F5B41F','#E37831'),limits = c('S','R'))+
-  theme(panel.grid.major = element_blank(), panel.background = element_rect(color = 'black', fill = 'transparent'), 
+  geom_point(aes(color = treatment), size = 2) +
+  # scale_color_brewer(palette='Paired') +
+  scale_color_manual(values = c('#9DC55C', '#6AADDF', '#8B7AB0', '#F5B41F', '#E37831'), limits = c('S', 'R')) +
+  theme(panel.grid.major = element_blank(), 
+        panel.background = element_rect(color = 'black', fill = 'transparent'), 
         plot.title = element_text(hjust = 0.5)) +
   labs(x = pcoa1, y = pcoa2, title = 'Bacteria Black Soil Bray-Curtis PCoA') +
-  stat_ellipse(aes(color = treatment), geom = 'polygon', level = 0.95, alpha = 0, show.legend = FALSE,linetype = 2)
+  stat_ellipse(aes(color = treatment), geom = 'polygon', level = 0.95, alpha = 0, show.legend = FALSE, linetype = 2)
 
 p1 
 
-#调整坐标轴范围
-p1 + coord_cartesian(xlim = c(-0.27, 0.28),ylim = c(-0.27,0.2))
+# Adjust axis ranges
+p1 + coord_cartesian(xlim = c(-0.27, 0.28), ylim = c(-0.27, 0.2))
 
 
-#作图3
-#size点大小，stroke点边框粗细
+# Plot 3
+# size: point size, stroke: point border thickness
 p <- ggplot(data = nmds_dis_site, aes(X1, X2)) +
-  geom_point(aes(color = treatment, shape = soil.time,size=0.15,stroke = 1.35)) +
-  scale_color_brewer(palette='Set3') +
-  scale_shape_manual(values = c(3,15,16,17,18,4,22,21,24,23),limits = c('B0', 'B7', 'B14','B28','B56','R0', 'R7', 'R14','R28','R56'))+
-  theme(panel.grid.major = element_blank(), panel.background = element_rect(color = 'black', fill = 'transparent'), 
+  geom_point(aes(color = treatment, shape = soil.time, size = 0.15, stroke = 1.35)) +
+  scale_color_brewer(palette = 'Set3') +
+  scale_shape_manual(values = c(3, 15, 16, 17, 18, 4, 22, 21, 24, 23), 
+                     limits = c('B0', 'B7', 'B14', 'B28', 'B56', 'R0', 'R7', 'R14', 'R28', 'R56')) +
+  theme(panel.grid.major = element_blank(), 
+        panel.background = element_rect(color = 'black', fill = 'transparent'), 
         plot.title = element_text(hjust = 0.5)) +
-  labs(x = pcoa1, y = pcoa2, title = 'Protist Weighted Unifrac PcoA') 
+  labs(x = pcoa1, y = pcoa2, title = 'Protist Weighted Unifrac PCoA') 
 p 
-#调整坐标轴范围
-p + coord_cartesian(ylim = c(-0.11, 0.29),xlim = c(-0.32, 0.33))
+# Adjust axis ranges
+p + coord_cartesian(ylim = c(-0.11, 0.29), xlim = c(-0.32, 0.33))
 
 
 
-#作图1  土壤合并作图
-#size点大小，stroke点边框粗细,panel.grid.minor=element_blank()不加参数边框有白色间隔
+# Plot 1 - Combined soil plot
+# size: point size, stroke: point border thickness, panel.grid.minor=element_blank() removes white gaps
 p <- ggplot(data = nmds_dis_site, aes(X1, X2)) +
-  geom_point(aes(color = soil, shape = protist),size= 2) +
-  #scale_color_brewer(palette='Set1') +
-  scale_color_manual(values = c("#00BCC2","#F8766D"))+
-  #scale_shape_manual(values = c(17,21,19,22,15),limits = c('0', '7', '14','28','56'))+
-  theme(panel.grid.major = element_blank(),panel.grid.minor=element_blank(), panel.background = element_rect(color = 'black', fill = 'transparent'), 
+  geom_point(aes(color = soil, shape = protist), size = 2) +
+  # scale_color_brewer(palette='Set1') +
+  scale_color_manual(values = c("#00BCC2", "#F8766D")) +
+  # scale_shape_manual(values = c(17,21,19,22,15),limits = c('0', '7', '14','28','56')) +
+  theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(), 
+        panel.background = element_rect(color = 'black', fill = 'transparent'), 
         plot.title = element_text(hjust = 0.5)) +
-  labs(x = pcoa1, y = pcoa2, title = ' PCoA') +
-  stat_ellipse(aes(color = soil), geom = 'polygon', level = 0.95, alpha = 0, show.legend = FALSE,linetype = 2)
+  labs(x = pcoa1, y = pcoa2, title = 'PCoA') +
+  stat_ellipse(aes(color = soil), geom = 'polygon', level = 0.95, alpha = 0, show.legend = FALSE, linetype = 2)
 
 p 
-
 
 
 # ====================================================
-# Richness calculate Analysis
+# Richness calculation Analysis
 
-#直接呈现具体数值
+# Display specific values directly
 # ===== Packages =====
 # install.packages(c("tidyverse","patchwork"))
 library(tidyverse)
 library(patchwork)
 
 # ===== Read data =====
-infile <- "richness_growth calculate.csv"   # 替换为你的文件
+infile <- "richness_growth_calculate.csv"   # Replace with your file
 df <- read.csv(infile, check.names = FALSE, stringsAsFactors = FALSE)
 if ("phylum" %in% names(df)) df <- dplyr::rename(df, Phylum = phylum)
 
-# 固定 y 轴顺序（按原表行序）
+# Fix y-axis order (according to original table row order)
 phylum_levels <- df$Phylum
 fix_phylum_order <- function(d) d %>% mutate(Phylum = factor(Phylum, levels = phylum_levels))
 
@@ -295,9 +312,9 @@ long <- df %>%
   filter(treat %in% c("P0","P2")) %>%
   fix_phylum_order()
 
-# ===== Stats by Phylum x Soil =====
-# 误差棒：±SE(diff)，其中 SE(diff) = sqrt(sd(P2)^2/n2 + sd(P0)^2/n0)
-# 显著性：Welch t-test（两独立组）
+# ===== Statistics by Phylum x Soil =====
+# Error bars: ±SE(diff), where SE(diff) = sqrt(sd(P2)^2/n2 + sd(P0)^2/n0)
+# Significance: Welch t-test (two independent groups)
 compute_stats <- function(d){
   x0 <- d$value[d$treat == "P0"]; n0 <- sum(!is.na(x0)); m0 <- mean(x0, na.rm = TRUE); s0 <- sd(x0, na.rm = TRUE)
   x2 <- d$value[d$treat == "P2"]; n2 <- sum(!is.na(x2)); m2 <- mean(x2, na.rm = TRUE); s2 <- sd(x2, na.rm = TRUE)
@@ -322,7 +339,7 @@ stats <- long %>%
   ungroup() %>%
   fix_phylum_order() %>%
   mutate(sig = case_when(
-    is.na(p_value)        ~ "",         # 不显著与缺失都不标
+    is.na(p_value)        ~ "",         # Non-significant and missing are not marked
     p_value <= 0.001      ~ "***",
     p_value <= 0.01       ~ "**",
     p_value <= 0.05       ~ "*",
@@ -334,7 +351,7 @@ write.csv(stats %>% mutate(Phylum = as.character(Phylum)),
 
 # ===== Plotting (point = mean(P2)-mean(P0); errorbar = ±SE) =====
 plot_one <- function(d, soil_title, fill_color){
-  # 星号放在误差棒外侧；若 SE 缺失/为0，则贴在点旁边
+  # Place asterisks outside error bars; if SE missing/0, place next to point
   pad <- 0.02 * diff(range(c(d$xmin, d$xmax, d$diff), na.rm = TRUE))
   d <- d %>%
     mutate(
@@ -349,7 +366,7 @@ plot_one <- function(d, soil_title, fill_color){
                    height = 0.2, linewidth = 0.6, colour = "grey35", na.rm = TRUE) +
     geom_point(aes(x = diff), size = 3.6, shape = 21,
                fill = fill_color, colour = "black", alpha = 0.95) +
-    geom_text(data = subset(d, sig != ""),  # 只画显著的
+    geom_text(data = subset(d, sig != ""),  # Only plot significant ones
               aes(x = x_for_star, label = sig),
               size = 3.2, fontface = "bold") +
     scale_y_discrete(limits = phylum_levels, drop = FALSE) +
@@ -364,7 +381,7 @@ plot_one <- function(d, soil_title, fill_color){
 p_B <- stats %>% filter(soil == "B") %>% plot_one("Soil B", "#6B3F1F")
 p_R <- stats %>% filter(soil == "R") %>% plot_one("Soil R", "#E0C89A")
 
-# 展示
+# Display
 print(p_B); print(p_R)
 
 # ===== Save PDFs =====
@@ -376,16 +393,16 @@ ggsave("ASV_change_B_R_side_by_side_SE.pdf", combo, width = 13, height = 6, devi
 
 
 
-# 计算增长比例
+# Calculate percent change
 library(tidyverse)
 library(patchwork)
 
 # ===== Read data =====
-infile <- "richness_growth calculate.csv"   # 替换为你的文件
+infile <- "richness_growth_calculate.csv"   # Replace with your file
 df <- read.csv(infile, check.names = FALSE, stringsAsFactors = FALSE)
 if ("phylum" %in% names(df)) df <- dplyr::rename(df, Phylum = phylum)
 
-# 按原表行序固定 y 轴
+# Fix y-axis order according to original table
 phylum_levels <- df$Phylum
 fix_phylum_order <- function(d) d %>% mutate(Phylum = factor(Phylum, levels = phylum_levels))
 
@@ -401,9 +418,9 @@ long <- df %>%
   filter(treat %in% c("P0","P2")) %>%
   fix_phylum_order()
 
-# ===== Stats: percent change + ±SE(%) ; Welch t-test for p =====
-# 如果 P0 的均值为 0，百分比无法计算；默认给 NA。
-# 如需避免 NA，可把 eps 改为一个小值（例如 1），即 denominator = max(mean(P0), eps)
+# ===== Statistics: percent change + ±SE(%); Welch t-test for p =====
+# If mean of P0 is 0, percent change cannot be calculated; default to NA.
+# To avoid NA, set eps to a small value (e.g., 1), i.e., denominator = max(mean(P0), eps)
 eps <- 0
 
 compute_stats <- function(d){
@@ -413,14 +430,14 @@ compute_stats <- function(d){
   diff     <- m2 - m0
   se_diff  <- if (n0 >= 2 || n2 >= 2) sqrt((s0^2)/pmax(n0,1) + (s2^2)/pmax(n2,1)) else NA_real_
   
-  # 百分比（相对 P0 的均值）
+  # Percent change relative to P0 mean
   denom    <- if (m0 > 0 || eps > 0) max(m0, eps) else NA_real_
   diff_pct <- 100 * diff / denom
   se_pct   <- 100 * se_diff / denom
   xmin     <- diff_pct - se_pct
   xmax     <- diff_pct + se_pct
   
-  # Welch t-test（显著性与是否用百分比无关，仍基于原始数值）
+  # Welch t-test (significance independent of percent change, based on original values)
   pval <- NA_real_
   if (n0 >= 2 && n2 >= 2) {
     tt <- tryCatch(t.test(x2, x0, var.equal = FALSE), error = function(e) NULL)
@@ -450,7 +467,7 @@ write.csv(stats %>% mutate(Phylum = as.character(Phylum)),
 
 # ===== Plotting (point = % change; errorbar = ±SE%) =====
 plot_one <- function(d, soil_title, fill_color){
-  # 星号放在误差棒外侧；若 SE 缺失/为0，则贴在点旁
+  # Place asterisks outside error bars; if SE missing/0, place next to point
   pad <- 0.02 * diff(range(c(d$xmin, d$xmax, d$diff_pct), na.rm = TRUE))
   d <- d %>%
     mutate(
@@ -465,7 +482,7 @@ plot_one <- function(d, soil_title, fill_color){
                    height = 0.2, linewidth = 0.6, colour = "grey35", na.rm = TRUE) +
     geom_point(aes(x = diff_pct), size = 3.6, shape = 21,
                fill = fill_color, colour = "black", alpha = 0.95) +
-    geom_text(data = subset(d, sig != ""),  # 只标显著
+    geom_text(data = subset(d, sig != ""),  # Only mark significant
               aes(x = x_for_star, label = sig),
               size = 3.2, fontface = "bold") +
     scale_y_discrete(limits = phylum_levels, drop = FALSE) +
@@ -481,7 +498,7 @@ plot_one <- function(d, soil_title, fill_color){
 p_B <- stats %>% filter(soil == "B") %>% plot_one("Soil B", "#6B3F1F")
 p_R <- stats %>% filter(soil == "R") %>% plot_one("Soil R", "#E0C89A")
 
-# 展示
+# Display
 print(p_B); print(p_R)
 
 # ===== Save PDFs =====
@@ -492,12 +509,12 @@ combo <- p_B + p_R + plot_layout(ncol = 2)
 ggsave("ASV_percent_change_B_R.pdf", combo, width = 13, height = 6, device = "pdf")
 
 
-# ===== 在“绝对差 (P2 − P0)”那一段的 stats 计算完成后，新增这一段 =====
-# 确保 soil 是按 B, R 的顺序
+# ===== After completing the statistics calculation for "absolute difference (P2 − P0)", add this section =====
+# Ensure soil is ordered as B, R
 stats <- stats %>% mutate(soil = factor(soil, levels = c("B","R")))
 
 plot_combined_diff <- function(d){
-  # 为星号计算摆放位置（仍然放在误差棒外侧；SE 缺失/为 0 时贴点）
+  # Calculate position for asterisks (still placed outside error bars; if SE missing/0, place next to point)
   pad <- 0.02 * diff(range(c(d$xmin, d$xmax, d$diff), na.rm = TRUE))
   d <- d %>%
     mutate(
@@ -506,7 +523,7 @@ plot_combined_diff <- function(d){
       x_for_star = x_for_star + ifelse(diff >= 0, pad, -pad)
     )
   
-  pd <- position_dodge(width = 0.55)  # 按 soil 在 y 方向并排
+  pd <- position_dodge(width = 0.55)  # Arrange by soil along y-axis
   
   ggplot(d, aes(y = Phylum, group = soil)) +
     geom_vline(xintercept = 0, linewidth = 1.2, colour = "#C69C3B") +
@@ -534,7 +551,7 @@ plot_combined_diff <- function(d){
     )
 }
 
-# 生成与保存
+# Generate and save
 p_combined_diff <- plot_combined_diff(stats)
 print(p_combined_diff)
 ggsave("ASV_change_B_R_combined_SE.pdf", p_combined_diff, width = 7.5, height = 6, device = "pdf")
@@ -549,16 +566,16 @@ library(ggplot2)
 library(cowplot)
 library(showtext)
 
-# 读取数据和分组合并
-alpha <- read.delim('richness.txt', header=T, row.names = 1, stringsAsFactors = FALSE, check.names = F)
+# Read data and merge groups
+alpha <- read.delim('richness.txt', header = T, row.names = 1, stringsAsFactors = FALSE, check.names = F)
 alpha$sample_id <- row.names(alpha)
-groupB <- read.delim('group_B_P2.txt', header=T, stringsAsFactors = FALSE, check.names = F)
-groupR <- read.delim('group_R_P2.txt', header=T, stringsAsFactors = FALSE, check.names = F)
+groupB <- read.delim('group_B_P2.txt', header = T, stringsAsFactors = FALSE, check.names = F)
+groupR <- read.delim('group_R_P2.txt', header = T, stringsAsFactors = FALSE, check.names = F)
 group <- rbind(groupB, groupR)
 
 data <- merge(alpha, group, by = "sample_id")
 
-# 初始化结果数据框，明确列名
+# Initialize results dataframe with explicit column names
 result <- data.frame(
   soil = character(),
   bacterial = character(),
@@ -573,13 +590,13 @@ result <- data.frame(
 
 n = 0
 
-# 同时处理B和R两种土壤
+# Process both B and R soils simultaneously
 for (s in c("B", "R")) {
   for (t in unique(data$bacterial)) {
     n = n + 1
     data2 <- subset(data, soil == s & bacterial == t)
     
-    # 检查protist是否有且只有两个水平
+    # Check if protist has exactly two levels
     protist_levels <- unique(data2$protist)
     if (length(protist_levels) != 2) {
       result[n, "soil"] <- s
@@ -589,11 +606,11 @@ for (s in c("B", "R")) {
       result[n, "p2_mean"] <- NA
       result[n, "mean_diff"] <- NA
       result[n, "t_value"] <- NA
-      result[n, "label"] <- paste("分组数=", length(protist_levels), sep="")
+      result[n, "label"] <- paste("Number of groups =", length(protist_levels), sep="")
       next
     }
     
-    # 检查每组样本量是否足够
+    # Check if sample size in each group is sufficient
     sample_counts <- table(data2$protist)
     if (any(sample_counts < 2)) {
       result[n, "soil"] <- s
@@ -603,15 +620,15 @@ for (s in c("B", "R")) {
       result[n, "p2_mean"] <- NA
       result[n, "mean_diff"] <- NA
       result[n, "t_value"] <- NA
-      result[n, "label"] <- "样本量不足"
+      result[n, "label"] <- "Insufficient sample size"
       next
     }
     
-    # 进行t检验
+    # Perform t-test
     t_test <- t.test(richness ~ protist, data = data2)
     p <- t_test$p.value
     
-    # 计算均值差异等信息
+    # Calculate mean difference and other information
     p0_mean <- mean(data2$richness[data2$protist == "P0"], na.rm = TRUE)
     p2_mean <- mean(data2$richness[data2$protist == "P2"], na.rm = TRUE)
     mean_diff <- p0_mean - p2_mean
@@ -636,17 +653,17 @@ for (s in c("B", "R")) {
   }
 }
 
-# 查看结果
-print("eveness的t检验结果:")
+# View results
+print("T-test results for evenness:")
 print(result)
 
-# 保存结果
+# Save results
 write.csv(result, "eveness.csv", row.names = F, quote = F)
 
-# 输出显著性总结
-cat("\n=== 显著性总结 ===\n")
+# Output significance summary
+cat("\n=== Significance Summary ===\n")
 for (s in c("B", "R")) {
-  cat("\n土壤类型:", s, "\n")
+  cat("\nSoil type:", s, "\n")
   for (t in c("D1", "D2", "D3")) {
     subset_result <- result[result$soil == s & result$bacterial == t, ]
     if (nrow(subset_result) > 0) {
@@ -657,9 +674,9 @@ for (s in c("B", "R")) {
   }
 }
 
-# 分别查看两种土壤的结果
-cat("\n=== 黑壤(B)结果 ===\n")
+# View results separately for each soil type
+cat("\n=== Black Soil (B) Results ===\n")
 print(result[result$soil == "B", ])
 
-cat("\n=== 红壤(R)结果 ===\n")
+cat("\n=== Red Soil (R) Results ===\n")
 print(result[result$soil == "R", ])
